# nchorder

./: .gitattributes  .gitignore  LICENSE.md  README.md  buildozer.spec  main.py  nchorder-gui.spec  p4a_hook.py  pyproject.toml  run_gui.sh
.github/workflows/: ci.yml  release.yml
configs/: 1.cfg  mirrorwalk.cfg  mirrorwalk.json  mirrorwalk_generated.cfg  mirrorwalk_nomcc.cfg  mirrorwalk_nomcc_fixed.cfg  mirrorwalk_source.csv
custom_firmware/: Makefile  README.md  main.c
custom_firmware/include/: nchorder_buttons.h  nchorder_chords.h  nchorder_config.h  nchorder_hid.h  nchorder_trill.h  nchorder_usb.h
custom_firmware/src/: button_driver_trill.c  nchorder_buttons.c  nchorder_chords.c  nchorder_i2c.c  nchorder_led_gpio.c  nchorder_storage.c  nchorder_trill.c  nchorder_usb.c
docs/: 01-PRODUCT_OVERVIEW.md  02-HARDWARE_RE.md  03-GPIO_DISCOVERY.md  04-I2C_ANALYSIS.md  08-APPROTECT_BYPASS.md  README.md
docs/nchorder/: FIRMWARE.md  HARDWARE.md
docs/twiddler4/: 01-PRODUCT_OVERVIEW.md  02-HARDWARE_RE.md  03-GPIO_DISCOVERY.md  04-I2C_ANALYSIS.md  04-LED_CONTROL.md  05-OPTICAL_SENSOR.md  06-CONFIG_FORMAT.md  07-FIRMWARE_DEVELOPMENT.md  08-APPROTECT_BYPASS.md  README.md
firmware/: MEMORY_MAP.md  Makefile  Makefile.gpio_test  Makefile.led_test  README.md  gpio_test.c  led_test.c  led_test.ld  main.c  minimal_rtt.h
firmware/_build_led_test/: led_test.elf  led_test.hex
firmware/include/: nchorder_battery.h  nchorder_buttons.h  nchorder_cdc.h  nchorder_chords.h  nchorder_config.h  nchorder_flash.h  nchorder_hid.h  nchorder_i2c.h  nchorder_ini.h  nchorder_led.h  nchorder_mouse.h  nchorder_msc.h  nchorder_optical.h  nchorder_storage.h  nchorder_trill.h  nchorder_usb.h  paw3204_probe.h  raw_i2c_test.h
firmware/src/: button_driver_trill.c  nchorder_battery.c  nchorder_buttons.c  nchorder_cdc.c  nchorder_chords.c  nchorder_flash.c  nchorder_i2c.c  nchorder_ini.c  nchorder_led.c  nchorder_led_gpio.c  nchorder_mouse.c  nchorder_msc.c  (+5 more)
manifest/: device_filter.xml  extra_manifest.xml  intent-filter.xml
tests/: __init__.py  conftest.py  test_config.py  test_formats.py  test_hid.py  test_word_exercises.py
tools/: nchorder-repeat-off  run_trill_visualizer.sh  trill_visualizer.py
(+31 files in other folders)
