[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "northern-chorder"
version = "0.1.0"
description = "Configuration tools for nRF52840-based chorded keyboards"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ian"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
northern-chorder = "nchorder_tools.cli:main"
nchorder = "nchorder_tools.cli:main"
nchorder-gui = "nchorder_tools.gui.app:main"
nchorder-debug = "nchorder_tools.gui.debug_view:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
gui = [
    "kivy>=2.2.0",
    "pyserial>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
